# estudos_cg

./: CMakeLists.txt  README.md  cubinho.max  documentacao.odt
assets/: bola.blend  bola.blend1  cubinho.ASE  cubinho.mtl  cubo_com_tex.blend  cubo_com_tex.mtl  outro_cu.mtl  sphere.mtl
mylib/: CMakeLists.txt  Geometry.cpp  Geometry.h  Shader.cpp  Shader.h  Texture.h  Utils.cpp  Utils.h  camera.cpp  camera.h
nehe_02/: CMakeLists.txt  nehe02.cpp  shader.cpp  shader.h
nehe_03/: CMakeLists.txt  nehe03.cpp  shader.h  vertexShader.vertexshader
nehe_04/: CMakeLists.txt  nehe04.cpp  shader.cpp  shader.h
nehe_04b/: CMakeLists.txt  camera.cpp  camera.h  fragmentShader.fragmentshader  geometry.cpp  geometry.h  nehe04b.cpp
nehe_05/: CMakeLists.txt  camera.cpp  camera.h  fragmentShader.fragmentshader  geometry.cpp  geometry.h  myObjLoader.h  nehe05.cpp  shader.cpp  shader.h  utils.h  vertexShader.vertexshader
nehe_05b/: CMakeLists.txt  nehe_05b.cpp
